# baip-python

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: test.yml
baip/: __init__.py  attestation.py  identity.py  inscription.py  resolver.py
spec/: BAIP-1.md
tests/: test_attestation.py  test_identity.py  test_inscription.py  test_resolver.py
